--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -1,6 +1,8 @@
 name: Run Integration Tests
 
-on: [push]
+on:
+  repository_dispatch:
+    types: [run-tests]
 
 jobs:
   test:
@@ -10,10 +12,8 @@ jobs:
     - uses: actions/checkout@v3
 
     # Install Docker Compose
-    - name: Install Docker Compose
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y docker-compose
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
     # Spin up all services
     - name: Start services
