--- a/.github/workflows/mock-storage.yaml
+++ b/.github/workflows/mock-storage.yaml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     
     env:
-      VERSION: ${{ github.sha }}
+      VERSION: latest
       CONTAINER_REGISTRY: ${{ secrets.CONTAINER_REGISTRY }}
       REGISTRY_UN: ${{ secrets.REGISTRY_UN }}
       REGISTRY_PW: ${{ secrets.REGISTRY_PW  }}
