--- a/.github/workflows/metadata.yaml
+++ b/.github/workflows/metadata.yaml
@@ -26,9 +26,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    
     env:
-      VERSION: ${{ github.sha }}
+      VERSION: latest
       CONTAINER_REGISTRY: ${{ secrets.CONTAINER_REGISTRY }}
       REGISTRY_UN: ${{ secrets.REGISTRY_UN }}
       REGISTRY_PW: ${{ secrets.REGISTRY_PW  }}
@@ -71,26 +70,6 @@ jobs:
       - uses: azure/setup-kubectl@v1
         with:
           version: 'v1.24.2'
-
-      - name: Update Config File
-        run: |
-          CONFIG_FILE=./configs/config.json
-          # Check if config.json exists, create it if not
-          if [ ! -f $CONFIG_FILE ]; then
-            echo '{"services": {}}' > $CONFIG_FILE
-          fi
-          
-          # Update the version for the gateway service
-          jq --arg version "${{ github.sha }}" --arg service "$NAME" '.services[$service].version = $version' $CONFIG_FILE > tmp.$$.json && mv tmp.$$.json $CONFIG_FILE
-
-      #
-      # Upload the updated config file as an artifact
-      #
-      - name: Upload Config File
-        uses: actions/upload-artifact@v3
-        with:
-          name: config-file
-          path: config.json
 
       #
       # Expands the configuration template and deploys the microservice.
