--- a/.github/workflows/end-to-end-tests.yaml
+++ b/.github/workflows/end-to-end-tests.yaml
@@ -34,7 +34,7 @@ jobs:
 
     # Wait for services to be ready
     - name: Wait for services
-      run: sleep 30
+      run: sleep 30 # This is a temporary solution
 
     # Run Playwright tests
     - name: Run Playwright tests
@@ -43,3 +43,12 @@ jobs:
     # Tear down services after tests
     - name: Tear down
       run: docker compose down
+
+    - name: Trigger Deployment Pipeline
+      if: ${{ success() }}
+      run: |
+        curl -X POST \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.everest-preview+json" \
+          https://api.github.com/repos/daosgava/daniel-garcia-sit772-10-hd/dispatches \
+          -d '{"event_type":"deploy-gateway"}'
