--- a/.github/workflows/gateway.yaml
+++ b/.github/workflows/gateway.yaml
@@ -5,7 +5,7 @@
 # For real use you might want to restrict this to the "prod" branch.
 #
 
-name: Deploy gateway
+name: Build gateway
 
 on:
   #
@@ -22,8 +22,9 @@ on:
   #
   workflow_dispatch:
 
-  repository_dispatch:
-    types: [deploy-gateway]
+permissions:
+  actions: write
+  contents: write
 
 jobs:
 
@@ -55,63 +56,8 @@ jobs:
       - name: Publish
         run: ./scripts/cd/push-image.sh
 
+      - name: Make trigger-e2e-tests.sh executable
+        run: chmod +x ./scripts/cd/trigger-e2e-tests.sh
+
       - name: Trigger E2E tests
-        run: |
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github.everest-preview+json" \
-            https://api.github.com/repos/daosgava/daniel-garcia-sit772-10-hd/dispatches \
-            -d '{"event_type":"run-tests"}'
-
-      - name: Wait for E2E tests to complete
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const { data: runs } = await github.rest.actions.listWorkflowRuns({
-              owner: 'daosgava',  // Owner of the target repository
-              repo: 'daniel-garcia-sit772-10-hd',  // Name of the target repository
-              event: 'repository_dispatch',  // This identifies the workflow triggered by the dispatch
-              status: 'completed',           // Check for completed status
-              per_page: 1                    // Get the latest run
-            });
-
-            if (runs.workflow_runs.length === 0) {
-              throw new Error('No E2E workflow runs found.');
-            }
-            const run_id = runs.workflow_runs[0].id;
-
-            const status = await github.rest.actions.getWorkflowRun({
-              owner: 'daosgava',
-              repo: 'daniel-garcia-sit772-10-hd',
-              run_id: run_id,
-            });
-
-            if (status.data.conclusion !== 'success') {
-              throw new Error('E2E tests failed.');
-            }
-
-      #
-      # Installs Kubectl and connects it to the cluster.
-      #
-      # https://github.com/marketplace/actions/kubernetes-cli-kubectl
-      #
-      # - uses: tale/kubectl-action@v1
-      #   with:
-      #     base64-kube-config: ${{ secrets.KUBE_CONFIG }}
-      #     kubectl-version: v1.24.2
-      - name: Setup kubeconfig
-        run: |
-          mkdir -p ~/.kube
-          echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode | gunzip > ~/.kube/config
-          chmod 600 ~/.kube/config
-
-      # Install Kubectl and use the decompressed kubeconfig
-      - uses: azure/setup-kubectl@v1
-        with:
-          version: 'v1.24.2'
-
-      #
-      # Expands the configuration template and deploys the microservice.
-      #
-      - name: Deploy
-        run: ./scripts/cd/deploy.sh
+        run: ./scripts/cd/trigger-e2e-tests.sh ${{ secrets.GITHUB_TOKEN }} deploy-gateway
