--- a/.github/workflows/end-to-end-tests.yaml
+++ b/.github/workflows/end-to-end-tests.yaml
@@ -58,4 +58,4 @@ jobs:
           -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Accept: application/vnd.github.everest-preview+json" \
           https://api.github.com/repos/daosgava/daniel-garcia-sit772-10-hd/dispatches \
-          -d "{\"event_type\":\"$NEXT_PIPELINE\" \"client_payload\":{\"version\":\"$VERSION\"}}"
+          -d "{\"event_type\":\"$NEXT_PIPELINE\", \"client_payload\":{\"version\":\"$VERSION\"}}"
