update the other pipelines

--- a/.github/workflows/metadata-deploy.yaml
+++ b/.github/workflows/metadata-deploy.yaml
@@ -5,28 +5,28 @@
 # For real use you might want to restrict this to the "prod" branch.
 #
 
-name: Deploy gateway
+name: Deploy metadata
 
 on:
-
   #
   # Allows deployment to be invoked manually through the GitHub Actions user interface.
   #
-  workflow_dispatch:
+  workflow_dispatch: 
 
   repository_dispatch:
-    types: [deploy-gateway]
+    types: [deploy-metadata]
 
 jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    
     env:
       VERSION: ${{ github.event.client_payload.version }}
       CONTAINER_REGISTRY: ${{ secrets.CONTAINER_REGISTRY }}
-      NAME: gateway
-      DIRECTORY: gateway
+      REGISTRY_UN: ${{ secrets.REGISTRY_UN }}
+      REGISTRY_PW: ${{ secrets.REGISTRY_PW  }}
+      NAME: metadata
+      DIRECTORY: metadata
 
     steps:
       
