--- a/.github/workflows/history-deploy.yaml
+++ b/.github/workflows/history-deploy.yaml
@@ -5,7 +5,7 @@
 # For real use you might want to restrict this to the "prod" branch.
 #
 
-name: Deploy gateway
+name: Deploy history
 
 on:
 
@@ -15,7 +15,7 @@ on:
   workflow_dispatch:
 
   repository_dispatch:
-    types: [deploy-gateway]
+    types: [deploy-history]
 
 jobs:
 
@@ -25,8 +25,10 @@ jobs:
     env:
       VERSION: ${{ github.event.client_payload.version }}
       CONTAINER_REGISTRY: ${{ secrets.CONTAINER_REGISTRY }}
-      NAME: gateway
-      DIRECTORY: gateway
+      REGISTRY_UN: ${{ secrets.REGISTRY_UN }}
+      REGISTRY_PW: ${{ secrets.REGISTRY_PW  }}
+      NAME: history
+      DIRECTORY: history
 
     steps:
       
